<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Show Places</string>
    <string name="hello_world">Hello world!</string>
    <string name="accion_mostrar">Show Places</string>
    <string name="accion_preferencias">Preferences</string>
    <string name="accion_acerca_de">About</string>
    <string name="accion_salir">Exit</string>
    <string name="accion_settings">Settings</string>
    <string name="title_activity_edicion_lugar">EdicionLugarActivity</string>
    <string name="values">Default</string>
    <string name="accion_guardar">Save</string>
    <string name="accion_cancelar">Cancel</string>
</resources>