<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        style="@style/EstiloTexto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/values"
        android:textSize="@dimen/titulo" />

    <TextView
        style="@style/EstiloTexto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/app_name" />

    <Button
        android:id="@+id/button1"
        style="@style/EstiloBotones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="lanzarVistaLugar"
        android:text="@string/accion_mostrar"
        android:textSize="@dimen/boton" />

    <Button
        android:id="@+id/button2"
        style="@style/EstiloBotones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accion_preferencias"
        android:textSize="@dimen/boton" />

    <Button
        android:id="@+id/button3"
        style="@style/EstiloBotones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accion_acerca_de"
        android:textSize="@dimen/boton" />

    <Button
        android:id="@+id/button4"
        style="@style/EstiloBotones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accion_salir"
        android:textSize="@dimen/boton" />

</LinearLayout>